fix: 총 댓글 수 연산 수정